[package]
name = "recipe-pick"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive", "env"] }
colored = "2.0.4"
csv = "1.2.2"
indicatif = { version = "0.17.5", features = ["tokio"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive", "serde_derive"] }
serde_json = "1.0.102"
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["full"] }
ulid = "1.0.0"
